fixed word-wrap problem in xs size

--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -5,3 +5,7 @@ body {
 .nav > li > a {
 	padding: 6px 12px;
 }
+
+.message-word-break {
+	word-wrap: break-word;
+}
